res/scss/management.scss
/* ... */
.explanation-text {
	color: #999;
	h4+& {
		margin-top: -1.1em;
		margin-bottom: 1.33em;
	}
}

.wcml-section-content .wcml-section-content-inner:not(:last-child) {
	margin: 0 0 20px 0;
	padding: 0 0 10px 0;
	border-bottom: 1px solid #ededed;
}

.wcml-section-header {
	h3 {
		font-weight: normal;
		font-size: 1.4em;
		margin-top: 0.7em;
		.wcml-tip:before {
			vertical-align: top;
		}
	}
}



@media (min-width: 1200px) {
	.wcml-section-header {
		width: 310px;
		float: left;

		.rtl & {
			float: right;
		}
	}
	.wcml-section-content {
		float: left;
		width: 600px;
		max-width: 100%;
		margin-left: 30px;

		.rtl & {
			float: right;
		}

		> p:first-child,
		> div:first-child {
			margin-top: 1em;
		}
	}

	.wcml-section-content-wide {
		width: calc(100% - 360px);
	}
}

.wcml_products {
	margin: 20px 0;
	position: relative;
}

/* Woocommerce styles*/

.button-wrap, .widefat td .button-wrap {
	text-align: right;
	margin: 10px 0;
}

.currency_action_update {
	display: inline-block;
}

.wcml-dialog-container {
	padding: 0;
}
.wcml-co-dialog {
	&.hidden {
		display: none;
	}
	.wpml-form-row {
		label, input, select, .wcml-co-preview-value, .ant-select {
			margin: 3px 15px;
		}
		label {
			font-size: 13px;
			width: 150px;
			margin-left: 0;
			margin-right: 0;
			text-align: start;
		}
		input, select {
			width: 185px;
			margin-right: 0;

			&.ant-select-selection-search-input {
				width: 100%;
			}
		}
	}
	.currency_code {
		label {
			vertical-align: top;
		}
		select {
			width: auto;
			max-width: calc(100% - 165px);
		}
	}

	.wcml-co-exchange-rate {
		label {
			vertical-align: top;
		}
		input {
			margin: 0 !important;
			width: 75px;
		}
		.wcml-co-set-rate {
			display: inline-block;
			padding: 4px $margin-sm $margin-xs $margin-sm;
			max-width: 265px;

			input {
				margin-right: 10px !important;
			}
		}
		small {
			display: block;
			margin-top: 5px;
		}
	}
	.wcml-co-help-link {
		margin-top: 7px;
	}

	.wcml-co-preview {
		label {
			vertical-align: middle;
		}

		.wcml-co-preview-value {
			display: inline-block;
			padding: $margin-xs $margin-sm;
			border: 1px solid #555;
			border-radius: 3px;
			font-size: 1.4em;
			font-weight: bold;
			vertical-align: middle;
			min-width: 185px;
			text-align: right;
		}
		& + a {
			float: right;
			margin-top: -36px;
		}
	}
	.label-header {
		margin: 20px 0 7px;
		display: block;
	}
	.wcml-gateways-switcher {
		display: flex;
		align-items: center;
		margin: 7px 0 30px;
		.otgs-toggle-group {
			display: inline-flex;
			margin-inline-end: 15px;
		}
		.otgs-switcher {
			white-space: nowrap;
		}
	}

	.wcml-gateways {
		margin-bottom: 30px;
		.wpml-form-row {
			label {
				width: 130px;
			}
			input, select {
				width: auto;
				&+.wcml-tip {
					margin-inline-start: -12px;
				}
			}
		}
		.explanation-text {
			display: block;
			margin: 0 15px;
		}
	}
}

table.widefat.currency_table {
	float: left;
	width: 255px;
	border-right: none;
	@media (max-width: 782px) {
		width: 120px;
	}

	td.wcml-col-currency,
	td.wcml-col-rate {
		padding-top: $margin-xs;
		padding-bottom: 0;
		vertical-align: top;
	}

	td.wcml-col-currency {
		.truncate {
			max-width: 100px;
			display: block;
		}
		small {
			display: block;
		}
	}
	td.wcml-col-edit a {
		position: relative;
		top: -3px;
	}

	td.wcml-col-rate {
		font-size: .85em;
		padding-inline-start: 3px;
		.truncate {
			max-width: 75px;
			display: block;
		}
	}
	@media (max-width: 782px) {
		.wcml-col-rate {
			display: none;
		}
	}
}

table.widefat.currency_settings_table {
	float: left;
	width: 80px;
	border-left: none;
	clear: none;
		td.wcml-col-delete,
		td.wcml-col-edit {
			vertical-align: middle;
			text-align: center;
			&:first-child {
				border-left: 1px solid #e5e5e5;
			}
		}
}



.currency_value .wcml-error,
.wcml-error {
	font-size: 10px;
	color: #f00;
	display: inline-block;
}

.trbl_variables_products {
	padding: 10px;
	border: 1px solid #8cceea;
	background-color: #eff8fc;
	border-radius: 5px;
	label span {
		font-weight: bold;
	}
}

.wcml_trbl_warning {
	padding: 10px;
	margin-bottom: 10px;
	border: 1px solid #f00;
	background-color: #ffb7b7;
	border-radius: 5px 5px;
}

#wcml_sync_variations {
	background-color: #21759b;
	background-image: linear-gradient(to bottom, #2a95c5, #21759b);
	border-color: #21759b;
	border-bottom-color: #1e6a8d;
	box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.5);
	color: #fff;
	text-decoration: none;
	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
}

.wcml_duplicate_product_notice td {
	border-bottom: none !important;
}

.wcml_product_status_text,
.prod_parent_text {
	font-style: italic;
	color: #9A9A9A;
}

.wcml_no_found_text {
	text-align: center;
}

/* on/off buttons */

.currency_languages {
	&:first-child {
		border-left: 1px solid #e5e5e5;
	}
	position: relative;
	text-align: center;
	ul {
		margin: 0;
		text-align: center;
		li {
			margin: 0;
			display: none;
			&.on {
				display: inline-block;
			}
		}
	}
}
.currencies-table-content {
	display: inline-block;
	min-width: 291px;

	.tablenav.top {
		margin-bottom: 15px;
	}
	@media(min-width: 1200px) {
		min-width: 600px;
	}
	&::after {
		display: table;
		clear: both;
		content: '';
	}
}
table.widefat.currency_lang_table {
	border-left: none;
	border-right: none;
	thead{
		.currency-lang-flags {
			height: 23px;
		}
		tr {
			height: 68px - 23px;
		}
		td {
			border-bottom: 0;
			text-align: center;
			padding: 3px 10px 1px 0;
			font-size: 1em;
		}
		th {
			padding-top: 0;
			padding-bottom: 0;
			text-align: center;
		}
	}
}

.currency_wrap {
	width: 100%;
	max-width: calc(100% - 255px - 80px);
	min-width: 70px;
	float: left;
	margin-bottom: 10px;
	position: relative;
	&::after {
		content: '';
		position: absolute;
		top: 1px;
		bottom: 1px;
		right: 0;
		width: 15px;
		background: linear-gradient(to right, transparent, #fff);
	}
	@media (max-width: 782px) {
		max-width: calc(100% - 121px - 80px);
	}
}

.currency_inner {
	overflow-x: auto;
	overflow-y: visible;
}
/* ... */

